feat: 多环境配置

--- a/mg-server/all/src/main/resources/app.properties
+++ b/mg-server/all/src/main/resources/app.properties
@@ -1,96 +1,96 @@
-http.session.cache.name = http_session_cache_name_0321
-
-http.api.page500 = /p500/index.html
-http.api.page404 = /p400/index.html
-http.view.page500 = /p500/index.html
-http.view.page404 = /p400/index.html
-
-http.api.readbuffersize=2048
-http.view.readbuffersize=1024
-im.ws.readbuffersize=1024
-im.socket.readbuffersize=1024
-
-# session超时时间，单位：秒，（3600=1小时，21600 = 6小时，86400=24小时，2592000=30天，15552000=180天）
-http.session.timeout = 21600
-
-
-# contextpath，要么是空串，要么是/开头的
-http.api.contextpath = /tioadmin
-http.api.suffix = .admin_x
-http.view.suffix =
-http.view.contextpath =
-
-freemarker.suffix=txt|js|css|html|htm|json|xml
-##    http 配置 end
-
-############################################################################################################################################
-
-
-# 默认的替换敏感词的串
-sensitive.words.replace.text = *
-
-#------------ im server start ------------------------
-#提供给websocket的端口
-im.port.ws = 9325
-#提供给APP的端口
-im.port.app = 9326
-
-
-#生产环境的网站
-product.site=https://www.t-io.org
-
-#获取MG_TIO_ACCESS_TOKEN的几个key
-access.token.android.key1=kjmnopdc
-access.token.android.key2=KjnbopSy
-access.token.android.key3=EijBbMgHsjiSoleT
-
-access.token.ios.key1=LiNhEops
-access.token.ios.key2=LmhSuESp
-access.token.ios.key3=PlkDnjSmySuiEjhY
-
-access.token.pc.key1=UijSoEpB
-access.token.pc.key2=PkjSmTnb
-access.token.pc.key3=uPezilSoTLyzkMop
-
-pwd.key.login.aes=xOezYlYsPebzEolO
-pwd.key.register.aes=iOezXlTsOebzEolU
-
-#第三方登录
-#----QQ（PC）
-third.login.qq.pc.AppID=101466082
-third.login.qq.pc.AppSecret=682e716c0a9afdbc0032b05f67bfcdd7
-#----微信（PC）
-third.login.wechat.pc.AppID=wx2a20ec1045f0671b
-third.login.wechat.pc.AppSecret=acea3c8aa46d5a55c3ad0b0623191b7f
-#----新浪微博（PC）
-third.login.weibo.pc.AppID=3119794664
-third.login.weibo.pc.AppSecret=1bf24c06f22a9d4d48d6491f90ee59bb
-#----抖音（PC）
-third.login.douyin.pc.AppID=awaws6waku0ix4gm
-third.login.douyin.pc.AppSecret=b7d52e751db5abb49ca1b661c294aa1a
-#----OSC（PC）
-third.login.osc.pc.AppID=HH71weLrRPpl4y8Hqp0g
-third.login.osc.pc.AppSecret=nY7N9t2tQWTv0Mftkiy0MfZtzMflSyE3
-
-#----苹果IMEI（苹果APP）
-third.login.apple.app.key=jkijhbmn
-
-
-#苹果内购key, ios pay key
-ios.pay.key=ijkmnbhg
-
-
-
-#用于统计的websocket配置
-stat.ws.protocol=wss
-stat.ws.port=9324
-
-#http-server-api启动时是否开启ssl，1：开启，2：不开启。因为http-server-api是运行在nginx后面，所以此处配成2
-web.api.use.ssl=2
-
-#阿里惠普字体的ttf文件路径
-medium.font.ttf.file=classpath:config/font/Alibaba-PuHuiTi-Medium.ttf
-#用户使用阿里惠普字体的字号
-user.avatar.medium.font.size=84
-#用户头像背景模板图片路径
-user.avatar.base.background.img=classpath:config/font/backgroud.png
+#http.session.cache.name = http_session_cache_name_0321
+#
+#http.api.page500 = /p500/index.html
+#http.api.page404 = /p400/index.html
+#http.view.page500 = /p500/index.html
+#http.view.page404 = /p400/index.html
+#
+#http.api.readbuffersize=2048
+#http.view.readbuffersize=1024
+#im.ws.readbuffersize=1024
+#im.socket.readbuffersize=1024
+#
+## session\u8D85\u65F6\u65F6\u95F4\uFF0C\u5355\u4F4D\uFF1A\u79D2\uFF0C\uFF083600=1\u5C0F\u65F6\uFF0C21600 = 6\u5C0F\u65F6\uFF0C86400=24\u5C0F\u65F6\uFF0C2592000=30\u5929\uFF0C15552000=180\u5929\uFF09
+#http.session.timeout = 21600
+#
+#
+## contextpath\uFF0C\u8981\u4E48\u662F\u7A7A\u4E32\uFF0C\u8981\u4E48\u662F/\u5F00\u5934\u7684
+#http.api.contextpath = /tioadmin
+#http.api.suffix = .admin_x
+#http.view.suffix =
+#http.view.contextpath =
+#
+#freemarker.suffix=txt|js|css|html|htm|json|xml
+###    http \u914D\u7F6E end
+#
+#############################################################################################################################################
+#
+#
+## \u9ED8\u8BA4\u7684\u66FF\u6362\u654F\u611F\u8BCD\u7684\u4E32
+#sensitive.words.replace.text = *
+#
+##------------ im server start ------------------------
+##\u63D0\u4F9B\u7ED9websocket\u7684\u7AEF\u53E3
+#im.port.ws = 9325
+##\u63D0\u4F9B\u7ED9APP\u7684\u7AEF\u53E3
+#im.port.app = 9326
+#
+#
+##\u751F\u4EA7\u73AF\u5883\u7684\u7F51\u7AD9
+#product.site=https://www.t-io.org
+#
+##\u83B7\u53D6MG_TIO_ACCESS_TOKEN\u7684\u51E0\u4E2Akey
+#access.token.android.key1=kjmnopdc
+#access.token.android.key2=KjnbopSy
+#access.token.android.key3=EijBbMgHsjiSoleT
+#
+#access.token.ios.key1=LiNhEops
+#access.token.ios.key2=LmhSuESp
+#access.token.ios.key3=PlkDnjSmySuiEjhY
+#
+#access.token.pc.key1=UijSoEpB
+#access.token.pc.key2=PkjSmTnb
+#access.token.pc.key3=uPezilSoTLyzkMop
+#
+#pwd.key.login.aes=xOezYlYsPebzEolO
+#pwd.key.register.aes=iOezXlTsOebzEolU
+#
+##\u7B2C\u4E09\u65B9\u767B\u5F55
+##----QQ\uFF08PC\uFF09
+#third.login.qq.pc.AppID=101466082
+#third.login.qq.pc.AppSecret=682e716c0a9afdbc0032b05f67bfcdd7
+##----\u5FAE\u4FE1\uFF08PC\uFF09
+#third.login.wechat.pc.AppID=wx2a20ec1045f0671b
+#third.login.wechat.pc.AppSecret=acea3c8aa46d5a55c3ad0b0623191b7f
+##----\u65B0\u6D6A\u5FAE\u535A\uFF08PC\uFF09
+#third.login.weibo.pc.AppID=3119794664
+#third.login.weibo.pc.AppSecret=1bf24c06f22a9d4d48d6491f90ee59bb
+##----\u6296\u97F3\uFF08PC\uFF09
+#third.login.douyin.pc.AppID=awaws6waku0ix4gm
+#third.login.douyin.pc.AppSecret=b7d52e751db5abb49ca1b661c294aa1a
+##----OSC\uFF08PC\uFF09
+#third.login.osc.pc.AppID=HH71weLrRPpl4y8Hqp0g
+#third.login.osc.pc.AppSecret=nY7N9t2tQWTv0Mftkiy0MfZtzMflSyE3
+#
+##----\u82F9\u679CIMEI\uFF08\u82F9\u679CAPP\uFF09
+#third.login.apple.app.key=jkijhbmn
+#
+#
+##\u82F9\u679C\u5185\u8D2Dkey, ios pay key
+#ios.pay.key=ijkmnbhg
+#
+#
+#
+##\u7528\u4E8E\u7EDF\u8BA1\u7684websocket\u914D\u7F6E
+#stat.ws.protocol=wss
+#stat.ws.port=9324
+#
+##http-server-api\u542F\u52A8\u65F6\u662F\u5426\u5F00\u542Fssl\uFF0C1\uFF1A\u5F00\u542F\uFF0C2\uFF1A\u4E0D\u5F00\u542F\u3002\u56E0\u4E3Ahttp-server-api\u662F\u8FD0\u884C\u5728nginx\u540E\u9762\uFF0C\u6240\u4EE5\u6B64\u5904\u914D\u62102
+#web.api.use.ssl=2
+#
+##\u963F\u91CC\u60E0\u666E\u5B57\u4F53\u7684ttf\u6587\u4EF6\u8DEF\u5F84
+#medium.font.ttf.file=classpath:config/font/Alibaba-PuHuiTi-Medium.ttf
+##\u7528\u6237\u4F7F\u7528\u963F\u91CC\u60E0\u666E\u5B57\u4F53\u7684\u5B57\u53F7
+#user.avatar.medium.font.size=84
+##\u7528\u6237\u5934\u50CF\u80CC\u666F\u6A21\u677F\u56FE\u7247\u8DEF\u5F84
+#user.avatar.base.background.img=classpath:config/font/backgroud.png
