--- a/mg-server/all/src/main/resources/application-test.properties
+++ b/mg-server/all/src/main/resources/application-test.properties
@@ -57,10 +57,10 @@ res.server=http://127.0.0.1:9092
 #2\u3001\u7528\u6237\u8BBF\u95EE\u8FD9\u4E9B\u8D44\u6E90\u53EA\u901A\u8FC7nginx\u8BBF\u95EE\uFF0C\u5E76\u4E0D\u7ECF\u8FC7http-api\u670D\u52A1\u5668
 #3\u3001\u5BF9\u7167upload.t-io.org.conf\u4E00\u8D77\u7406\u89E3\uFF0C\u6B64\u503C\u4E0Eupload.t-io.org.conf\u6587\u4EF6\u7684"server -> location -> root"\u914D\u7F6E\u503C\u4E00\u6837
 #res.root=D:/tio/tio-site/src/backend/all/src/main/resources/config/page/res_server/upload
-res.root=d:/data/tio/upload
+res.root=/opt/data/tio/upload
 
 #mysql\u540E\u53F0\u6570\u636E\u5E93\u5907\u4EFD\u5B58\u653E\u7684\u76EE\u5F55
-mysql.backup.backend.dir=d:/data/tio/mysqlbackup/backend
+mysql.backup.backend.dir=/opt/data/tio/mysqlbackup/backend
 
 #\u7528\u4E8E\u7EF4\u6301tio http session\u7684cookie name\uFF0C\u53EF\u4EE5\u4E0D\u7528\u4FEE\u6539
 #1\u3001\u5982\u679C\u5F00\u53D1\u73AF\u5883\u548C\u6D4B\u8BD5\u73AF\u5883\u7684\u4E3B\u57DF\u540D\u4E00\u6837\uFF0C\u4E0D\u540C\u73AF\u5883\u5EFA\u8BAE\u8BBE\u7F6E\u4E0D\u540C\u503C\uFF0C\u8FD9\u6837\u540C\u65F6\u8BBF\u95EE\u4E24\u4E2A\u73AF\u5883\u65F6cookie\u4E0D\u4F1A\u76F8\u4E92\u5E72\u6270
@@ -79,7 +79,7 @@ http.api.page=
 #http.view.page=D:/tio/tio-site/src/backend/all/src/main/resources/config/page
 #http.view.page=/config/page
 #http.view.page=D:/tio/backpage/page
-http.view.page=d:/home/server/mg-page/dist
+http.view.page=/opt/home/server/mg-page/dist
 
 #\u89E3\u7801\u5F02\u5E38\u65F6\uFF0C\u662F\u5426\u6253\u5370\u65E5\u5FD7\uFF0C\u5F00\u53D1\u73AF\u5883\u5EFA\u8BAE\u5F00\u542F
 http.api.logWhenDecodeError = true
