--- a/mg-server/all/src/main/resources/application.properties
+++ b/mg-server/all/src/main/resources/application.properties
@@ -95,4 +95,4 @@ user.avatar.medium.font.size=84
 #\u7528\u6237\u5934\u50CF\u80CC\u666F\u6A21\u677F\u56FE\u7247\u8DEF\u5F84
 user.avatar.base.background.img=classpath:config/font/backgroud.png
 
-tio.profile=dev
+tio.profile=test
